--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -6,26 +6,41 @@ block content
       img.eoslogo(src='/images/Logo-dark-landscape-v2-1.png')
     div.pageheaderitem.signupbuttoncontainer
       button.signupbutton Sign in to vote
-  h1.centre EOS Voter
-  p.centre EOS Voter is a provided as a free service to the community by EOSphere. You can use it to monitor the votes of block producers and to vote
-  h2.centre Active Block Producers
+    div.centre-header
+      h1.centre-h1 EOS Voter
+  div.content-container
+    p.centre EOS Voter is a provided as a free service to the community by EOSphere. You can use it to monitor the votes of block producers and to vote
+    h2.centre Active Block Producers
 
-  div.block-producer-list
-    - var n = 1
-    each blockproducer in activeblockproducers
+    div.block-producer-list
       div.block-producer-row
-        div.block-producer-cell.block-producer-cell-1= n++
-        div.block-producer-cell.block-producer-cell-2= blockproducer.name
-        div.block-producer-cell.block-producer-cell-3= blockproducer.votes
-        div.block-producer-cell.block-producer-cell-4= blockproducer.statement
+        div.block-producer-cell.block-producer-cell-1.block-producer-column-header &nbsp;
+        div.block-producer-cell.block-producer-cell-2.block-producer-column-header Block Producer
+        div.block-producer-cell.block-producer-cell-3.block-producer-column-header Current Vote Total
+        div.block-producer-cell.block-producer-cell-4.block-producer-column-header Information
 
-  h2.centre Backup Block Producers
+      - var n = 1
+      each blockproducer in activeblockproducers
+        div.block-producer-row
+          div.block-producer-cell.block-producer-cell-1.right #{sprintf(format, n++)} 
+          div.block-producer-cell.block-producer-cell-2= blockproducer.name
+          div.block-producer-cell.block-producer-cell-3.right= blockproducer.votes
+          div.block-producer-cell.block-producer-cell-4= blockproducer.statement
 
-  div.block-producer-list
-    each blockproducer in backupblockproducers
+    h2.centre Backup Block Producers
+
+    div.block-producer-list
       div.block-producer-row
-        div.block-producer-cell.block-producer-cell-1= n++
-        div.block-producer-cell.block-producer-cell-2= blockproducer.name
-        div.block-producer-cell.block-producer-cell-3= blockproducer.votes
-        div.block-producer-cell.block-producer-cell-4= blockproducer.statement
+        div.block-producer-cell.block-producer-cell-1.block-producer-column-header &nbsp;
+        div.block-producer-cell.block-producer-cell-2.block-producer-column-header Block Producer
+        div.block-producer-cell.block-producer-cell-3.block-producer-column-header Current Vote Total
+        div.block-producer-cell.block-producer-cell-4.block-producer-column-header Information
 
+      each blockproducer in backupblockproducers
+        div.block-producer-row
+          div.block-producer-cell.block-producer-cell-1.right #{sprintf(format, n++)} 
+          div.block-producer-cell.block-producer-cell-2= blockproducer.name
+          div.block-producer-cell.block-producer-cell-3.right= blockproducer.votes
+          div.block-producer-cell.block-producer-cell-4= blockproducer.statement
+
+  p A service provided by #[a(href='https://eosphere.io', target='_blank') EOSphere] Source code licenced under Affero GNU GPL #[a(href='https://github.com') Download source]
