Get the demo sign in button to forward to the vote page and otherwise behave correctly

--- a/eos-voter/public/stylesheets/style.css
+++ b/eos-voter/public/stylesheets/style.css
@@ -59,6 +59,12 @@ a {
   transform: translate(-50%,-50%);
 }
 
+.signupbutton:hover {
+  background-color: #FFF;
+  border: 3px solid black;
+  color: black;
+}
+
 .centre {
     text-align: center;
 }
