--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -4,10 +4,10 @@ block content
   div.pageheader
     div.pageheaderitem
       img.eoslogo(src='/images/Logo-dark-landscape-v2-1.png')
-    div.pageheaderitem.signupbuttoncontainer
-      button.signupbutton Sign in to vote
     div.centre-header
       h1.centre-h1 EOS Voter
+    div.pageheaderitem.signupbuttoncontainer
+      button.signupbutton(onclick='window.location="/vote.html"') Sign in to vote
   div.content-container
     p.centre EOS Voter is a provided as a free service to the community by EOSphere. You can use it to monitor the votes of block producers and to vote
     h2.centre Active Block Producers
