Move the vote page to a view rather than static html

--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -7,7 +7,7 @@ block content
     div.centre-header
       h1.centre-h1 EOS Voter
     div.pageheaderitem.signupbuttoncontainer
-      button.signupbutton(onclick='window.location="/vote.html"') Sign in to vote
+      button.signupbutton(onclick='window.location="/vote"') Sign in to vote
   div.content-container
     p.centre EOS Voter is a provided as a free service to the community by EOSphere. You can use it to monitor the votes of block producers and to vote
     h2.centre Active Block Producers
