--- a/eos-voter/views/vote.jade
+++ b/eos-voter/views/vote.jade
@@ -1,5 +1,6 @@
 extends layout
 
 block content
+  div(id='allblockproducers', 'data-block-producers'=allblockproducers )
   script(src="/bin/app.js")
 
