--- a/eos-voter/public/stylesheets/style.css
+++ b/eos-voter/public/stylesheets/style.css
@@ -204,11 +204,11 @@ div.block-producer-row:nth-child(odd) {
   font-size: 16px;
   border-radius: 8px;
   margin-left: 10px;
+}
 
-  /*
-  position: absolute;
-  top: 50%; left: calc(100% - 50px - 50px);
-  transform: translate(-50%,-50%)
-  */
+.vote-helper-button:hover {
+  background-color: #111;
+  border: 3px solid white;
+  color: white;
 }
 
