--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -10,7 +10,7 @@ block content
       button.signupbutton(onclick='window.location="/vote"') Sign in to vote
   div.content-container
     p.centre EOS Voter is a provided as a free service to the community by EOSphere. You can use it to monitor the votes of block producers and to vote
-    p.centre Currently connected to the #{networkname} network
+    p.centre Currently connected to the #{chainname} network
     h2.centre Active Block Producers
 
     div.block-producer-list
