Get the block producer list by reading out of the system smart contract

--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -26,7 +26,11 @@ block content
           div.block-producer-cell.block-producer-cell-1.right #{sprintf(format, n++)} 
           div.block-producer-cell.block-producer-cell-2= blockproducer.name
           div.block-producer-cell.block-producer-cell-3.right= blockproducer.votes
-          div.block-producer-cell.block-producer-cell-4 #{blockproducer.statement} !{"&nbsp;"}
+          div.block-producer-cell.block-producer-cell-4 
+            if blockproducer.valid_url
+              a(href=blockproducer.statement, target='_blank') #{blockproducer.statement}
+            else
+              div #{blockproducer.statement} !{"&nbsp;"}
 
     h2.centre Backup Block Producers
 
