Get block producers from the eosio system smart contract instead of inspecting every block

--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -46,6 +46,10 @@ block content
           div.block-producer-cell.block-producer-cell-1.right #{sprintf(format, n++)} 
           div.block-producer-cell.block-producer-cell-2= blockproducer.name
           div.block-producer-cell.block-producer-cell-3.right= blockproducer.votes
-          div.block-producer-cell.block-producer-cell-4= blockproducer.statement
+          div.block-producer-cell.block-producer-cell-4 
+            if blockproducer.valid_url
+              a.statement(href=blockproducer.statement, target='_blank') #{blockproducer.statement}
+            else
+              div #{blockproducer.statement} !{"&nbsp;"}
 
   p A service provided by #[a(href='https://eosphere.io', target='_blank') EOSphere] Source code licenced under Affero GNU GPL #[a(href='https://github.com') Download source]
