Improve the UI of feedback on your current vote

--- a/eos-voter/public/stylesheets/style.css
+++ b/eos-voter/public/stylesheets/style.css
@@ -283,4 +283,15 @@ a.statement:active {
   color: black;
 }
 
+.bolded-vote-info {
+  font-size: 16px;
+}
+
+.vote_info {
+  padding: 8px;
+  background-color: #eee;
+  border: 1px solid black;
+  border-radius: 3px;
+}
+
 
