--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -8,6 +8,7 @@ block content
       h1.centre-h1 EOS Voter
     div.pageheaderitem.signupbuttoncontainer
       button.signupbutton(onclick='window.location="/vote"') Sign in to vote
+  div.pageheader-spacer
   div.content-container
     p.centre EOS Voter is a provided as a free service to the community by EOSphere. You can use it to monitor the votes of block producers and to vote
     p.centre Currently connected to the #{chainname} network
