Refresh the browser window if there are no block producers. This is because the server has just started and not downloaded the bp list yet

--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -1,5 +1,9 @@
 extends layout
 
+block append head
+  if block_producer_list_empty
+    meta(http-equiv="refresh", content="2")
+
 block content
   div.pageheader
     div.pageheaderitem
