Store BP address and port in a seperate file plus send to the front end correctly. Plus try to detect if we need to stake

--- a/eos-voter/views/vote.jade
+++ b/eos-voter/views/vote.jade
@@ -1,6 +1,6 @@
 extends layout
 
 block content
-  div(id='allblockproducers', 'data-chain-name'=chainname, 'data-active-block-producers'=activeblockproducers, 'data-backup-block-producers'=backupblockproducers )
+  div(id='allblockproducers', 'data-chain-name'=chainname, 'data-active-block-producers'=activeblockproducers, 'data-backup-block-producers'=backupblockproducers, 'data-chain-addr'=chainaddr, 'data-chain-port'=chainport )
   script(src="/bin/app.js")
 
