Point the source code link at the correct repo

--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -57,4 +57,4 @@ block content
             else
               div #{blockproducer.statement} !{"&nbsp;"}
 
-  p A service provided by #[a(href='https://eosphere.io', target='_blank') EOSphere] Source code licenced under Affero GNU GPL #[a(href='https://github.com') Download source]
+  p A service provided by #[a(href='https://eosphere.io', target='_blank') EOSphere] Source code licenced under Affero GNU GPL #[a(href='https://github.com/eosphere/eos-voter') Download source]
