--- a/eos-voter/views/layout.jade
+++ b/eos-voter/views/layout.jade
@@ -4,5 +4,6 @@ html
     block head
       title= title
       link(rel='stylesheet', href='/stylesheets/style.css')
+      link(rel='shortcut icon', href='/images/vote-one.png', type='image/x-icon')
   body
     block content
