Add the ability to set some of the content in the config file

--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -15,7 +15,8 @@ block content
   div.pageheader-spacer
   div.content-container
     div !{landing_page_content}
-    p.centre Currently connected to the #{chainname} network
+    p.centre Currently connected to the #{chainname} network. 
+    p.centre Chain id = #{chainid}.
     h2.centre Active Block Producers
 
     div.block-producer-list
