Display the proportion of the tokens that have voted

--- a/eos-voter/public/stylesheets/style.css
+++ b/eos-voter/public/stylesheets/style.css
@@ -76,6 +76,11 @@ a {
     text-align: center;
 }
 
+.centre-activated {
+    text-align: center;
+    color: red;
+}
+
 .centre-h1 {
     text-align: center;
     margin: 0px;
