--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -17,6 +17,10 @@ block content
     div !{landing_page_content}
     p.centre Currently connected to the #{chainname} network. 
     p.centre Chain id = #{chainid}.
+    p.centre Percentage of EOS voting #{activated_percent}%
+    p.centre #{total_activated_stake} EOS have voted #{min_activated_stake} needed to activate the chain
+    if has_activated
+        p.centre-activated The EOS block chain has activated
     h2.centre Active Block Producers
 
     div.block-producer-list
