--- a/eos-voter/views/vote.jade
+++ b/eos-voter/views/vote.jade
@@ -3,6 +3,8 @@ extends layout
 block content
   div(id='allblockproducers', 'data-chain-name'=chainname, 'data-active-block-producers'=activeblockproducers,
       'data-backup-block-producers'=backupblockproducers, 'data-chain-addr'=chainaddr, 'data-chain-port'=chainport,
-      'data-chain-id'=chainid, 'data-voting-page-content'=voting_page_content )
+      'data-chain-id'=chainid, 'data-voting-page-content'=voting_page_content,
+      'data-total-activated-stake'=total_activated_stake, 'data-min-activated-stake'=min_activated_stake,
+      'data-activated-percent'=activated_percent)
   script(src="/bin/app.js")
 
