--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -21,7 +21,9 @@ block content
     p.centre #{total_activated_stake} EOS have voted #{min_activated_stake} needed to activate the chain
     if has_activated
         p.centre-activated The EOS block chain has activated
-    h2.centre Active Block Producers
+        h2.centre Active Block Producers
+    else
+        h2.centre Block Producer Candidates
 
     div.block-producer-list
       div.block-producer-row
@@ -42,24 +44,26 @@ block content
             else
               div #{blockproducer.statement} !{"&nbsp;"}
 
-    h2.centre Backup Block Producers
+    if has_activated
+        h2.centre Backup Block Producers
 
-    div.block-producer-list
-      div.block-producer-row
-        div.block-producer-cell.block-producer-cell-1.block-producer-column-header &nbsp;
-        div.block-producer-cell.block-producer-cell-2.block-producer-column-header Block Producer
-        div.block-producer-cell.block-producer-cell-3.block-producer-column-header Current Vote Total
-        div.block-producer-cell.block-producer-cell-4.block-producer-column-header Information
+        div.block-producer-list
+          div.block-producer-row
+            div.block-producer-cell.block-producer-cell-1.block-producer-column-header &nbsp;
+            div.block-producer-cell.block-producer-cell-2.block-producer-column-header Block Producer
+            div.block-producer-cell.block-producer-cell-3.block-producer-column-header Current Vote Total
+            div.block-producer-cell.block-producer-cell-4.block-producer-column-header Information
 
-      each blockproducer in backupblockproducers
-        div.block-producer-row
-          div.block-producer-cell.block-producer-cell-1.right #{sprintf(format, n++)} 
-          div.block-producer-cell.block-producer-cell-2= blockproducer.name
-          div.block-producer-cell.block-producer-cell-3.right #{blockproducer.votes_percent} #[span(class='small-vote-total') #{blockproducer.votes_absolute}M]
-          div.block-producer-cell.block-producer-cell-4 
-            if blockproducer.valid_url
-              a.statement(href=blockproducer.statement, target='_blank') #{blockproducer.statement}
-            else
-              div #{blockproducer.statement} !{"&nbsp;"}
+          each blockproducer in backupblockproducers
+            div.block-producer-row
+              div.block-producer-cell.block-producer-cell-1.right #{sprintf(format, n++)} 
+              div.block-producer-cell.block-producer-cell-2= blockproducer.name
+              div.block-producer-cell.block-producer-cell-3.right #{blockproducer.votes_percent} #[span(class='small-vote-total') #{blockproducer.votes_absolute}M]
+              div.block-producer-cell.block-producer-cell-4 
+                if blockproducer.valid_url
+                  a.statement(href=blockproducer.statement, target='_blank') #{blockproducer.statement}
+                else
+                  div #{blockproducer.statement} !{"&nbsp;"}
 
-  p A service provided by #[a(href='https://eosphere.io', target='_blank') EOSphere] Source code licenced under Affero GNU GPL #[a(href='https://github.com/eosphere/eos-voter', target='_blank') Download source]
+      p A service provided by #[a(href='https://eosphere.io', target='_blank') EOSphere] Source code licenced under Affero GNU GPL #[a(href='https://github.com/eosphere/eos-voter', target='_blank') Download source]
+
