--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -37,7 +37,7 @@ block content
         div.block-producer-row
           div.block-producer-cell.block-producer-cell-1.right #{sprintf(format, n++)} 
           div.block-producer-cell.block-producer-cell-2= blockproducer.name
-          div.block-producer-cell.block-producer-cell-3.right #{blockproducer.votes_percent} #[span(class='small-vote-total') #{blockproducer.votes_absolute}M]
+          div.block-producer-cell.block-producer-cell-3.right #[span(class='small-vote-total') #{blockproducer.votes_absolute}M] #{blockproducer.votes_percent}
           div.block-producer-cell.block-producer-cell-4 
             if blockproducer.valid_url
               a.statement(href=blockproducer.statement, target='_blank') #{blockproducer.statement}
@@ -58,7 +58,7 @@ block content
             div.block-producer-row
               div.block-producer-cell.block-producer-cell-1.right #{sprintf(format, n++)} 
               div.block-producer-cell.block-producer-cell-2= blockproducer.name
-              div.block-producer-cell.block-producer-cell-3.right #{blockproducer.votes_percent} #[span(class='small-vote-total') #{blockproducer.votes_absolute}M]
+              div.block-producer-cell.block-producer-cell-3.right #[span(class='small-vote-total') #{blockproducer.votes_absolute}M] #{blockproducer.votes_percent}
               div.block-producer-cell.block-producer-cell-4 
                 if blockproducer.valid_url
                   a.statement(href=blockproducer.statement, target='_blank') #{blockproducer.statement}
