--- a/eos-voter/public/stylesheets/style.css
+++ b/eos-voter/public/stylesheets/style.css
@@ -246,6 +246,27 @@ div.block-producer-row:nth-child(odd) {
   color: white;
 }
 
+.loader {
+  border: 4px solid darkgrey;
+  border-radius: 50%;
+  border-top: 4px solid black;
+  width: 15px;
+  height: 15px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }  
+}
+
 .dialog {
   position: fixed;
   left: 0;
