--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -37,7 +37,9 @@ block content
       each blockproducer in activeblockproducers
         div.block-producer-row
           div.block-producer-cell.block-producer-cell-1.right #{sprintf(format, n++)} 
-          div.block-producer-cell.block-producer-cell-2= blockproducer.name
+          div.block-producer-cell.block-producer-cell-2
+            img.bp-small-logo(src=blockproducer.bp_logo_256)
+            span #{blockproducer.name}
           div.block-producer-cell.block-producer-cell-3.right #[span(class='small-vote-total') #{blockproducer.votes_absolute}M] #{blockproducer.votes_percent}
           div.block-producer-cell.block-producer-cell-4 #{blockproducer.country_code}  !{"&nbsp;"}
           div.block-producer-cell.block-producer-cell-5 
@@ -60,7 +62,9 @@ block content
           each blockproducer in backupblockproducers
             div.block-producer-row
               div.block-producer-cell.block-producer-cell-1.right #{sprintf(format, n++)} 
-              div.block-producer-cell.block-producer-cell-2= blockproducer.name
+              div.block-producer-cell.block-producer-cell-2
+                img.bp-small-logo(src='http://www.eosphere.io/eospherelogosquare256.png')
+                span #{blockproducer.name}
               div.block-producer-cell.block-producer-cell-3.right #[span(class='small-vote-total') #{blockproducer.votes_absolute}M] #{blockproducer.votes_percent}
               div.block-producer-cell.block-producer-cell-4 #{blockproducer.country_code}  !{"&nbsp;"}
               div.block-producer-cell.block-producer-cell-5 
