--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -38,8 +38,13 @@ block content
         div.block-producer-row
           div.block-producer-cell.block-producer-cell-1.right #{sprintf(format, n++)} 
           div.block-producer-cell.block-producer-cell-2
-            img.bp-small-logo(src=blockproducer.bp_logo_256, onError="this.onerror=null;this.src='';")
-            span #{blockproducer.name}
+            if !blockproducer.fake_bp
+              img.bp-small-logo(src=blockproducer.bp_logo_256, onError="this.onerror=null;this.src='';")
+              span #{blockproducer.name}
+            if blockproducer.fake_bp
+              span(class='fake-bp-title') #{blockproducer.name} 
+              span(class='fake-bp-warning') #{' !CAUTION! '}
+              a(class='fake-bp-whats-this', href='/whats-this-bp-name-mismatch', target='_blank') Whats this
           div.block-producer-cell.block-producer-cell-3.right #[span(class='small-vote-total') #{blockproducer.votes_absolute}M] #{blockproducer.votes_percent}
           div.block-producer-cell.block-producer-cell-4 #{blockproducer.country_code}  !{"&nbsp;"}
           div.block-producer-cell.block-producer-cell-5 
@@ -63,8 +68,13 @@ block content
             div.block-producer-row
               div.block-producer-cell.block-producer-cell-1.right #{sprintf(format, n++)} 
               div.block-producer-cell.block-producer-cell-2
-                img.bp-small-logo(src=blockproducer.bp_logo_256, onError="this.onerror=null;this.src='';")
-                span #{blockproducer.name}
+                if !blockproducer.fake_bp
+                  img.bp-small-logo(src=blockproducer.bp_logo_256, onError="this.onerror=null;this.src='';")
+                  span #{blockproducer.name}
+                if blockproducer.fake_bp
+                  span(class='fake-bp-title') #{blockproducer.name} 
+                  span(class='fake-bp-warning') #{' !CAUTION! '}
+              a(class='fake-bp-whats-this', href='/whats-this-bp-name-mismatch', target='_blank') Whats this
               div.block-producer-cell.block-producer-cell-3.right #[span(class='small-vote-total') #{blockproducer.votes_absolute}M] #{blockproducer.votes_percent}
               div.block-producer-cell.block-producer-cell-4 #{blockproducer.country_code}  !{"&nbsp;"}
               div.block-producer-cell.block-producer-cell-5 
