--- a/eos-voter/views/layout.jade
+++ b/eos-voter/views/layout.jade
@@ -2,7 +2,7 @@ doctype html
 html
   head
     block head
-      title= title
+      title EOS Voter by EOSphere
       link(rel='stylesheet', href='/stylesheets/style.css')
       link(rel='shortcut icon', href='/images/vote-one.png', type='image/x-icon')
 
