--- a/eos-voter/views/layout.jade
+++ b/eos-voter/views/layout.jade
@@ -2,8 +2,31 @@ doctype html
 html
   head
     block head
-      title= title
+      title EOS Voter by EOSphere
       link(rel='stylesheet', href='/stylesheets/style.css')
       link(rel='shortcut icon', href='/images/vote-one.png', type='image/x-icon')
+      // HTML Meta Tags
+      meta(name="description", content="EOS Voter is a web portal created to interact with the EOS Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
+
+      // Google / Search Engine Tags
+      meta(itemprop="name", content="EOS Voter by EOSphere")
+      meta(itemprop="description", content="EOS Voter is a web portal created to interact with the EOS Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
+      meta(itemprop="image", content="http://eosphere.io/eosphere-io-eos-voter.png")
+
+      // Facebook Meta Tags
+      meta(property="og:url", content="http://eosvoter.eosphere.io")
+      meta(property="og:type", content="website")
+      meta(property="og:title", content="EOS Voter by EOSphere")
+      meta(property="og:description", content="EOS Voter is a web portal created to interact with the EOS Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
+      meta(property="og:image", content="http://eosphere.io/eosphere-io-eos-voter.png")
+
+      // Twitter Meta Tags 
+      meta(name="twitter:card", content="summary_large_image")
+      meta(name="twitter:title", content="EOS Voter by EOSphere")
+      meta(name="twitter:description", content="EOS Voter is a web portal created to interact with the EOS Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
+      meta(name="twitter:image", content="http://eosphere.io/eosphere-io-eos-voter.png")
+
+      // Meta Tags Generated via http://heymeta.com
+
   body
     block content
