--- a/eos-voter/views/layout.jade
+++ b/eos-voter/views/layout.jade
@@ -28,5 +28,15 @@ html
 
       // Meta Tags Generated via http://heymeta.com
 
+      script(async, src="https://www.googletagmanager.com/gtag/js?id=UA-117395304-2")
+      script.
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-117395304-2');
+
+
+
   body
     block content
