Inform the user if bp.json file is missing

--- a/eos-voter/public/stylesheets/style.css
+++ b/eos-voter/public/stylesheets/style.css
@@ -394,4 +394,12 @@ a.statement:active {
   color:red;
 }
 
+.bp-json-missing {
+  color: #333;
+}
+
+.bp-json-missing-warning {
+  color: DarkGoldenRod ;
+}
+
 
