Change wording of the button in the file to match manual changes on the server

--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -11,7 +11,7 @@ block content
     div.centre-header
       h1.centre-h1 EOS Voter
     div.pageheaderitem.signupbuttoncontainer
-      button.signupbutton(onclick='window.location="/vote"') Sign in to vote
+      button.signupbutton(onclick='window.location="/vote"') Sign in with Scatter to vote
   div.pageheader-spacer
   div.content-container
     div !{landing_page_content}
