Add a constitutional compliance whats this page

--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -31,7 +31,8 @@ block content
         div.block-producer-cell.block-producer-cell-2.block-producer-column-header Block Producer
         div.block-producer-cell.block-producer-cell-3.block-producer-column-header Current Vote Total
         div.block-producer-cell.block-producer-cell-4.block-producer-column-header Country
-        div.block-producer-cell.block-producer-cell-5.block-producer-column-header Comp
+        div.block-producer-cell.block-producer-cell-5.block-producer-column-header Comp 
+          a(class='fake-bp-whats-this', href='/whats-this-constitutional-compliance', target='_blank') [?]
         div.block-producer-cell.block-producer-cell-6.block-producer-column-header Information
 
       - var n = 1
