Add a message about consitution compliance when voting

--- a/eos-voter/public/stylesheets/style.css
+++ b/eos-voter/public/stylesheets/style.css
@@ -373,3 +373,30 @@ a.statement:active {
   font-size: 9px;
 }
 
+.constitution-agreement-text {
+  color: red;
+  font-size: 20px;
+}
+
+a.constitution-agreement-link {
+  font-size: 20px;
+  color: red;
+}
+
+a.constitution-agreement-link:link {
+  color: red;
+}
+
+a.constitution-agreement-link:visited {
+  color: red;
+}
+
+a.constitution-agreement-link:hover {
+  color: red;
+}
+
+a.constitution-agreement-link:active {
+  color: red;
+}
+
+
