Make the vote modal a seperate link

--- a/eos-voter/public/stylesheets/style.css
+++ b/eos-voter/public/stylesheets/style.css
@@ -73,6 +73,16 @@ a.signupbutton {
   line-height : 50px;
 }
 
+.popup-cancel-button {
+  float: right;
+  text-align:center;
+  text-decoration: none;
+}
+
+a.popup-cancel-button {
+  line-height : 40px;
+}
+
 .signupbutton:hover {
   background-color: #FFF;
   border: 3px solid black;
