--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -11,11 +11,11 @@ block content
     div.centre-header
       h1.centre-h1 EOS Voter
     div.pageheaderitem.signupbuttoncontainer
-      button.signupbutton(onclick='window.location="/vote"') Vote Now with Scatter
+      a.signupbutton(href='/vote') Vote Now with Scatter
   div.pageheader-spacer
   div.content-container
     div !{landing_page_content}
-    p.centre Currently connected to the #{chainname} network. 
+    p.centre Currently connected to the #{chainname} network.
     p.centre Chain id = #{chainid}.
     p.centre Percentage of EOS voting #{activated_percent}%
     p.centre #{total_activated_stake} EOS have voted #{min_activated_stake} needed to activate the chain
@@ -36,18 +36,18 @@ block content
       - var n = 1
       each blockproducer in activeblockproducers
         div.block-producer-row
-          div.block-producer-cell.block-producer-cell-1.right #{sprintf(format, n++)} 
+          div.block-producer-cell.block-producer-cell-1.right #{sprintf(format, n++)}
           div.block-producer-cell.block-producer-cell-2
             if !blockproducer.fake_bp
               img.bp-small-logo(src=blockproducer.bp_logo_256, onError="this.onerror=null;this.src='';")
               span #{blockproducer.name}
             if blockproducer.fake_bp
-              span(class='fake-bp-title') #{blockproducer.name} 
+              span(class='fake-bp-title') #{blockproducer.name}
               span(class='fake-bp-warning') #{' !CAUTION! '}
               a(class='fake-bp-whats-this', href='/whats-this-bp-name-mismatch', target='_blank') Whats this
           div.block-producer-cell.block-producer-cell-3.right #[span(class='small-vote-total') #{blockproducer.votes_absolute}M] #{blockproducer.votes_percent}
           div.block-producer-cell.block-producer-cell-4 #{blockproducer.country_code}  !{"&nbsp;"}
-          div.block-producer-cell.block-producer-cell-5 
+          div.block-producer-cell.block-producer-cell-5
             if blockproducer.valid_url
               a.statement(href=blockproducer.statement, target='_blank') #{blockproducer.statement}
             else
@@ -66,22 +66,21 @@ block content
 
           each blockproducer in backupblockproducers
             div.block-producer-row
-              div.block-producer-cell.block-producer-cell-1.right #{sprintf(format, n++)} 
+              div.block-producer-cell.block-producer-cell-1.right #{sprintf(format, n++)}
               div.block-producer-cell.block-producer-cell-2
                 if !blockproducer.fake_bp
                   img.bp-small-logo(src=blockproducer.bp_logo_256, onError="this.onerror=null;this.src='';")
                   span #{blockproducer.name}
                 if blockproducer.fake_bp
-                  span(class='fake-bp-title') #{blockproducer.name} 
+                  span(class='fake-bp-title') #{blockproducer.name}
                   span(class='fake-bp-warning') #{' !CAUTION! '}
                   a(class='fake-bp-whats-this', href='/whats-this-bp-name-mismatch', target='_blank') Whats this
               div.block-producer-cell.block-producer-cell-3.right #[span(class='small-vote-total') #{blockproducer.votes_absolute}M] #{blockproducer.votes_percent}
               div.block-producer-cell.block-producer-cell-4 #{blockproducer.country_code}  !{"&nbsp;"}
-              div.block-producer-cell.block-producer-cell-5 
+              div.block-producer-cell.block-producer-cell-5
                 if blockproducer.valid_url
                   a.statement(href=blockproducer.statement, target='_blank') #{blockproducer.statement}
                 else
                   div #{blockproducer.statement} !{"&nbsp;"}
 
       p A service provided by #[a(href='https://eosphere.io', target='_blank') EOSphere] Source code licenced under Affero GNU GPL #[a(href='https://github.com/eosphere/eos-voter', target='_blank') Download source]
-
